# game01

./: CMakeLists.txt  compile_commands.json
include/: SDL2  SDL2_image  SDL2_mixer  cjson
lib/: libSDL2.dylib  libSDL2_gfx.dylib  libSDL2_image.dylib  libSDL2_mixer.dylib  libSDL2_ttf.dylib  libcJSON.dylib  libcJSON_utils.dylib
resource/config/: menu_config.json
src/: CMakeLists.txt  main.cpp
src/Interface/: GameManager.cpp  GameManager.h  Manager.h  UIManager.cpp  UIManager.h
src/UIComponent/: ContentPanel.cpp  ContentPanel.h  MenuPanel.cpp  MenuPanel.h
